@@ -1,3 +1,9 @@
+2007-05-18  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* inttypes-h.m4: New file, from gettext-0.15.
+	* lock.m4: New file, from gettext-0.15.
+	* visibility.m4: New file, from gettext-0.15.
+
 2007-05-15  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* inttypes-h.m4: New file, from gettext-0.15.
